apps/development/markmine/namespace-patch.yml
apiVersion: v1
kind: Namespace
metadata:
  name: markmine
  labels:
    app.kubernetes.io/name: markmine
    environment: development
$patch: replace
