apps/development/markmine/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: markmine-dev
  labels:
    app.kubernetes.io/name: markmine
    environment: development
