apps/development/markmine/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markmine
  namespace: markmine
spec:
  rules:
    - host: markmine.leotsgo.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: markmine-backend
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: markmine-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: markmine-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - markmine.leotsgo.dev
      secretName: markmine-dev-tls
